# openclaw-python

./: .dockerignore  .env.example  .gitignore  AGENT_IMPROVEMENTS.md  AGENT_VS_GATEWAY_METHODS.md  ARCHITECTURE_DIAGRAMS.md  CHANGELOG.md  CONTRIBUTING.md  CONTROL_UI_SETUP.md  DEPLOYMENT_SUCCESS.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICKSTART.md  Dockerfile  FULL_FEATURES_GUIDE.md  GATEWAY_ARCHITECTURE.md  GATEWAY_METHODS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  PRODUCTION_READY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STARTUP_STATUS.md  START_FULL_FEATURED.md  SWITCH_TO_FULL_FEATURES.md  TELEGRAM_COMMANDS.md  TELEGRAM_CONNECTION_EXPLAINED.md  check_bot_status.sh  check_server_status.sh  docker-compose.yml  docker-start.sh  install-docker.sh  pyproject.toml  pytest.ini  quick_restart.sh  setup_and_start.sh  setup_env.sh  start_full_featured.py  start_full_server.sh  (+5 more)
.cursor/: GIT_COMMIT_GUIDELINES.md
clawdbot/: __init__.py
clawdbot/agents/: __init__.py  runtime.py  session.py
clawdbot/channels/: __init__.py  base.py  discord.py  registry.py  slack.py  telegram.py  webchat.py  whatsapp.py
clawdbot/cli/: agent_cmd.py  channels_cmd.py  gateway_cmd.py  main.py
clawdbot/config/: __init__.py  loader.py  schema.py  settings_manager.py
clawdbot/gateway/: __init__.py  handlers.py  server.py
clawdbot/plugins/: __init__.py  loader.py  types.py
clawdbot/skills/: __init__.py  loader.py  types.py
clawdbot/web/: __init__.py  app.py
control-ui/: package-lock.json  package.json  vite.config.ts
docs/: CRON_ALIGNMENT_SUMMARY.md  REFACTORING_COMPLETE.md  REFACTORING_V2_COMPLETE.md  cron_service_alignment_complete.md
examples/: 05_telegram_bot.py  09_v0.6_features.py  10_gateway_telegram_bridge.py  11_channel_manager_demo.py  12_event_system_demo.py  13_test_refactor.py  14_mid_priority_refactor_demo.py  monitoring_phoenix.py
extensions/discord/: plugin.json  plugin.py
extensions/memory-lancedb/: plugin.json  plugin.py
extensions/slack/: plugin.json  plugin.py
extensions/telegram/: plugin.json  plugin.py
extensions/whatsapp/: plugin.json  plugin.py
openclaw/: __init__.py  cli.py  events.py  runtime_env.py
openclaw/agents/: abort.py  agent.py  agent_loop.py  command_auth.py  context.py  events.py  image_loader.py  process_isolation.py  prompt_templates.py  proxy.py  runtime.py  session.py  session_entry.py  session_ids.py  session_tree.py  session_workspace.py  subagent_announce.py  subagent_registry.py  subagent_registry_store.py  system_prompt.py  system_prompt_bootstrap.py  system_prompt_params.py  system_prompt_sections.py  task_prompts.py  workspace_templates.py
openclaw/api/: openai_compat.py  server.py  websocket.py
openclaw/auth/: api_keys.py  device_pairing.py  pairing.py  persistent_api_keys.py  rate_limiter.py
openclaw/auto_reply/: __init__.py  command_detection.py  command_parser.py  commands_registry.py  commands_registry_data.py  commands_registry_types.py  directive_tags.py  directives.py  dispatch.py  envelope.py  inbound_context.py  inbound_dedupe.py  media_parse.py  reply.py  skill_commands.py  streaming_directives.py  tokens.py  types.py
openclaw/browser/: __init__.py  cdp_helpers.py  chrome_integration.py  controller.py  extension_relay.py  profiles.py  role_snapshots.py  sandbox.py  screenshot.py
openclaw/channels/: __init__.py  base.py  bluebubbles.py  chat_commands.py  chunker.py  command_auth_integration.py  connection.py  enhanced_telegram.py  imessage.py  line.py  matrix.py  mattermost.py  nextcloud.py  nostr.py  registry.py  teams.py  telegram.py  telegram_media.py  tlon.py  webchat.py  zalo.py
openclaw/cli/: agent_cmd.py  browser_cmd.py  channels_cmd.py  completion.py  config_cmd.py  cron_cmd.py  devices_cmd.py  dns_cmd.py  gateway_cmd.py  hooks_cmd.py  logs_cmd.py  main.py  memory_cmd.py  message_cmd.py  misc_cmd.py  models_cmd.py  nodes_cmd.py  plugins_cmd.py  sandbox_cmd.py  security_cmd.py  skills_cmd.py  status_cmd.py  system_cmd.py  tools_cmd.py  update_cmd.py
openclaw/config/: __init__.py  env_substitution.py  includes.py  legacy.py  loader.py  paths.py  reloader.py  schema.py  settings.py  settings_manager.py  unified.py
openclaw/cron/: __init__.py  schedule.py  service.py  store.py  timer.py  types.py
openclaw/daemon/: __init__.py  launchd.py  service.py  systemd.py
openclaw/devices/: manager.py
openclaw/discovery/: mdns.py
openclaw/exec/: approval_manager.py
openclaw/extensions/: __init__.py  api.py  loader.py  runner.py  runtime.py  types.py
openclaw/gateway/: __init__.py  auth.py  auth_middleware.py  authorization.py  bootstrap.py  bootstrap.py.backup  bootstrap_enhanced.py  channel_manager.py  config_reload.py  config_service.py  cron_bootstrap.py  cron_integration.py  device_auth.py  discovery.py  error_codes.py  events.py  handlers.py  http_server.py  rpc_client.py  server.py  server_browser.py  server_canvas.py  server_close_enhanced.py  server_control_ui.py  server_model_catalog.py  server_restart_sentinel.py  server_startup.py  server_tailscale.py  (+7 more)
scripts/: build-ui.sh  check_coverage.sh  demo_chat.sh  run_all_tests.sh  run_integration_tests.sh  run_openclaw.sh  run_tests.sh  run_unit_tests.sh  start_gateway_with_telegram.py  test-docker-safe.sh  test_ci.sh  test_commands.sh  test_system.sh
tests/: TEST_README.md  __init__.py  conftest.py  run_refactor_tests.py  test_agent_abort.py  test_agent_execution_e2e.py  test_auth.py  test_auth_rotation.py  test_channels_enhanced.py  test_compaction.py  test_config.py  test_config_unified.py  test_diagnostic_events.py  test_error_recovery.py  test_events.py  test_failover.py  test_file_manager.py  test_formatting.py  test_full_flow_e2e.py  test_gateway_agent_integration.py  test_health_system.py  test_monitoring.py  test_onboarding_e2e.py  test_queuing.py  test_runtime.py  test_runtime_env.py  test_session.py  test_sessions_key_utils.py  test_settings_manager.py  test_skills.py  test_stress.py  test_summarization.py  test_thinking.py  test_tool_policies.py  test_tools.py  test_tools_base.py  test_tools_enhanced.py  test_websocket.py
(+372 files in other folders)
